--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="yessertech"
+OWNER_NAME="OFFICIAL-BHERON"
 PREFIX="~"
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "YESSER MD"
+BOT_NAME= "BHERON MD"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "255621995482"
-OWNER_NAME= "᚛yessertech᚜"
+NUMERO_OWNER= "880 1602-072612"
+OWNER_NAME= "᚛OFFICIAL-BHERON᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
