--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -3,7 +3,7 @@ PREFIX="~"
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "BHERON MD"
+BOT_NAME= "BHERON-MD"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
 NUMERO_OWNER= "880 1602-072612"
 OWNER_NAME= "᚛OFFICIAL-BHERON᚜"
