--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name":"BHERON-MD",
   "description":"Best whatsapp bot developed by me",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://files.catbox.moe/c90ngd.jpeg",
+  "logo":"https://files.catbox.moe/9it5tk.jpeg",
   "repository":"https://github.com/djbheron100/Bheron-md",
   "succes_url":"/",
   "stack":"container",
